--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,12 +26,15 @@ jobs:
           password: ${{ github.token }}
 
       # TODO: add cosign-installer etc.
+      - name: install cosign
+        uses: sigstore/cosign-installer@main
 
       - name: Prepare Dockerfile
         run: |
           echo "FROM alpine:3.10" > Dockerfile
 
       - name: Build and push
+        id: push-step
         uses: docker/build-push-action@v2
         with:
           context: ./
@@ -38,3 +44,13 @@ jobs:
             ghcr.io/reimei1213/test-image:latest
           platforms: linux/amd64
           push: true
+
+      - name: Sign the container image
+        env:
+          COSIGN_EXPERIMENTAL: "true"
+        run: cosign sign --force ghcr.io/${{ github.repository }}@${{ steps.push-step.outputs.digest }}
+
+      - name: Verify the container image
+        env:
+          COSIGN_EXPERIMENTAL: "true"
+        run: cosign verify ghcr.io/${{ github.repository }}@${{ steps.push-step.outputs.digest }}
