--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: install cosign
+        uses: sigstore/cosign-installer@main
+
       - name: Login to GHCR
         uses: docker/login-action@v1
         with:
@@ -24,10 +27,6 @@ jobs:
           # Suppose that your repository is located at https://github.com/<X>/<Y>, this value should be equal to X
           username: Reimei1213
           password: ${{ github.token }}
-
-      # TODO: add cosign-installer etc.
-      - name: install cosign
-        uses: sigstore/cosign-installer@main
 
       - name: Prepare Dockerfile
         run: |
@@ -41,16 +40,16 @@ jobs:
           file: ./Dockerfile
           # Suppose that your repository is located at https://github.com/<X>/<Y>, this value should be equal to ghcr.io/<X>/<random value>:latest
           tags: |
-            ghcr.io/reimei1213/test-image:latest
+            ghcr.io/${{ github.actor }}/test-image:latest
           platforms: linux/amd64
           push: true
 
       - name: Sign the container image
         env:
           COSIGN_EXPERIMENTAL: "true"
-        run: cosign sign --force ghcr.io/${{ github.repository }}@${{ steps.push-step.outputs.digest }}
+        run: cosign sign --force ghcr.io/${{ github.actor }}@${{ steps.push-step.outputs.digest }}
 
       - name: Verify the container image
         env:
           COSIGN_EXPERIMENTAL: "true"
-        run: cosign verify ghcr.io/${{ github.repository }}@${{ steps.push-step.outputs.digest }}
+        run: cosign verify ghcr.io/${{ github.actor }}@${{ steps.push-step.outputs.digest }}
